Update project with new changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My React App</title>
-    <script src="src/app.js" defer></script>
 </head>
 <body>
     <div id="root"></div>
+
+    <!-- Включаем React и ReactDOM -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    
+    <!-- Подключаем ваш скрипт app.js -->
+    <script src="src/app.js" defer></script>
 </body>
 </html>
