--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
     
     <!-- Подключение вашего сгенерированного JavaScript-кода React-приложения -->
-    <script src="src\app.js"></script>
+    <script src="src\App.js"></script>
   </body>
 </html>
